--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
       crossorigin
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
+    />
+
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
