--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="BaLaw.svg"
+      href="BaLawCharacter-mini.svg"
     />
     <link
       rel="stylesheet"
