--- a/index.html
+++ b/index.html
@@ -1,31 +1,45 @@
 <!doctype html>
+
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+
+    <!-- 브라우저 탭에 표시될 파비콘 아이콘 -->
     <link
       rel="icon"
       type="image/svg+xml"
-      href="BaLaw.svg"
+      href="BaLawCharacter-mini.svg"
     />
+
+    <!-- Pretendard 폰트 불러오기 (CDN) -->
     <link
       rel="stylesheet"
       as="style"
       crossorigin
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.css"
     />
+
+    <!-- 구글 머터리얼 아이콘 불러오기 -->
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
     />
 
+    <!-- 반응형 뷰포트 설정 -->
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
+
+    <!-- 브라우저 탭에 표시될 서비스 이름 -->
     <title>BaLaw</title>
   </head>
+
   <body>
+    <!-- React가 마운트될 루트 DOM -->
     <div id="root"></div>
+
+    <!-- 앱 시작점 (엔트리) -->
     <script
       type="module"
       src="/src/main.tsx"
