--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <head>
     <meta charset="UTF-8" />
 
+    <!-- 주소 -->
+    <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+
     <!-- 브라우저 탭에 표시될 파비콘 아이콘 -->
     <link
       rel="icon"
